# simple-png

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.win  README.md  example.c  png.h  spng.lib
examples/: example.c  mandelbrot.cpp  open_example.c
include/: crc32table.h  drawing.h
include/spng/: colour.h  drawing.h  png.h
src/: bitmap.h  codepage-437.h  colour.c  crc32.2.c  crc32.c  crc32.h  drawing.c  drawing.h  png.c  png.h
